# pixel-kiln

./: .gitignore  CLAUDE.md  README.md  dev.sh
backend/: pyproject.toml
backend/app/: cli.py  color_utils.py  jobs.py  main.py  palettes.py  params.py  pipeline.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  index.css  main.tsx  theme.ts  use-params-store.ts
frontend/src/components/: FolderPicker.tsx  PaletteStrip.tsx  ParamPanel.tsx
frontend/src/pages/: Batch.tsx  Settings.tsx  Workbench.tsx
